--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="about-image fade-in">
                 <div class="image-wrapper">
                     <div class="image-placeholder">
-                        <img src="/assets/dhvl.jpeg">
+                        <img src="/images/dhvl.jpeg">
                     </div>
                 </div>
             </div>
@@ -199,7 +199,7 @@
         <div class="projects-grid">
             <div class="project-card fade-in">
                 <div class="project-image">
-                    <img src="/assets/ugaoo.png">
+                    <img src="/images/ugaoo.png">
                     <i class="fas fa-seedling"></i>
                 </div>
                 <div class="project-content">
@@ -218,7 +218,7 @@
             </div>
             <div class="project-card fade-in">
                 <div class="project-image">
-                    <img src="/assets/electronic.png">
+                    <img src="/images/electronic.png">
                     <i class="fas fa-laptop-code"></i>
                 </div>
                 <div class="project-content">
