--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="about-image fade-in">
                 <div class="image-wrapper">
                     <div class="image-placeholder">
-                        <img src="images/dhvl.jpeg">
+                        <img src="images/dhvl.jpeg" alt="dhaval">
                     </div>
                 </div>
             </div>
@@ -328,4 +328,5 @@
 <script src="style.js"></script>
 
 </html>
+
 
